@@ -1,5 +1,6 @@
 #VERSION 0.9.4#
 
+ - added property $_password_salt and method getSalt() to class Peak_Model_Authentication
  - marked class Peak_View_Helper_html as deprecated
  - updated Peak_Controller_Internal_Pkdoc with new version of twitter bootstrap
  - updated vendor twitter bootstrap to 2.1.0
